--- a/RemoveOutliers.ipynb
+++ b/RemoveOutliers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "591b7f5b",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "985256b3",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "dbe1020b",
    "metadata": {},
    "outputs": [
@@ -41,14 +41,18 @@
      "output_type": "stream",
      "text": [
       "Enter the number of smallest and largest values to remove: 2\n",
+      "Enter a value (q or Q to quit): 1001\n",
+      "Enter a value (q or Q to quit): 2001\n",
+      "Enter a value (q or Q to quit): 1\n",
+      "Enter a value (q or Q to quit): 2\n",
+      "Enter a value (q or Q to quit): -1001\n",
+      "Enter a value (q or Q to quit): -20\n",
+      "Enter a value (q or Q to quit): 5\n",
+      "Enter a value (q or Q to quit): 4\n",
+      "Enter a value (q or Q to quit): 3\n",
       "Enter a value (q or Q to quit): 1\n",
       "Enter a value (q or Q to quit): 2\n",
       "Enter a value (q or Q to quit): 3\n",
-      "Enter a value (q or Q to quit): 4\n",
-      "Enter a value (q or Q to quit): 5\n",
-      "Enter a value (q or Q to quit): 6\n",
-      "Enter a value (q or Q to quit): 7\n",
-      "Enter a value (q or Q to quit): 8\n",
       "Enter a value (q or Q to quit): q\n"
      ]
     }
@@ -64,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "f0dc1f09",
    "metadata": {},
    "outputs": [
@@ -72,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The original data:  [1, 2, 3, 4, 5, 6, 7, 8]\n"
+      "The original data:  [1001, 2001, 1, 2, -1001, -20, 5, 4, 3, 1, 2, 3]\n"
      ]
     }
    ],
@@ -83,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "a11a83eb",
    "metadata": {},
    "outputs": [
@@ -91,8 +95,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The data with the outliers removed:  [3, 4, 5, 6]\n",
-      "The outliers:  [8, 1, 7, 2]\n"
+      "The data with the outliers removed:  [1, 2, 5, 4, 3, 1, 2, 3]\n",
+      "The outliers:  [2001, -1001, 1001, -20]\n"
      ]
     }
    ],
@@ -107,6 +111,14 @@
     "    print('The data with the outliers removed: ',a_list)\n",
     "    print('The outliers: ', b_list)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ac1c752",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
